tests/extra_mod/baking/long_simple_three_mpst_short_fail.stderr
error[E0308]: mismatched types
   --> $DIR/long_simple_three_mpst_short_fail.rs:103:33
    |
103 |             let (_, s) = s.send(()).recv()?;
    |                                 ^^ expected enum `Branching0fromCtoA`, found `()`

error[E0599]: no method named `recv` found for struct `MeshedChannelsThree<mpstthree::binary::struct_trait::end::End, mpstthree::binary::struct_trait::send::Send<(), Recv<(), mpstthree::binary::struct_trait::send::Send<Branching0fromCtoB, mpstthree::binary::struct_trait::end::End>>>, RoleB<RoleBroadcast>, RoleC<RoleEnd>>` in the current scope
   --> $DIR/long_simple_three_mpst_short_fail.rs:103:37
    |
9   | baker!("basic", MeshedChannelsThree, A, B, C);
    | ---------------------------------------------------------- method `recv` not found for this
...
103 |             let (_, s) = s.send(()).recv()?;
    |                                     ^^^^ method not found in `MeshedChannelsThree<mpstthree::binary::struct_trait::end::End, mpstthree::binary::struct_trait::send::Send<(), Recv<(), mpstthree::binary::struct_trait::send::Send<Branching0fromCtoB, mpstthree::binary::struct_trait::end::End>>>, RoleB<RoleBroadcast>, RoleC<RoleEnd>>`
    |
    = note: the method was found for
            - `MeshedChannelsThree<Recv<T, S1>, S2, RoleB<R>, RoleA<RoleEnd>>`
            - `MeshedChannelsThree<S1, Recv<T, S2>, RoleC<R>, RoleA<RoleEnd>>`
            - `MeshedChannelsThree<Recv<T, S1>, S2, RoleA<R>, RoleB<RoleEnd>>`
            - `MeshedChannelsThree<S1, Recv<T, S2>, RoleC<R>, RoleB<RoleEnd>>`
            and 8 more types
